[package]
name = "share-certificate-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.1.0"
stellar-tokens = "0.7.1"
stellar-macros = "0.7.1"

[profile.release]
opt-level = "z"
lto = true
debug = false

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
stellar-tokens = { version = "0.7.1", features = ["testutils"] }
